--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -44,17 +44,22 @@
             <td>
               <figure class="media">
                 <div class="img-wrap" style="min-width: 100px; margin-right: 10px;"><img src="{{product.image || '//:0'}}"  alt="{{product.name}}" class="img-thumbnail img-sm" style="width: 200px;"></div>
-                <figcaption class="media-body">
-                  <h6 class="title">{{product.name}} </h6>
-                  <dl class="dlist-inline small">
-                    <dt>Size: </dt>
-                    <dd>XXX</dd>
-                  </dl>
-                  <dl class="dlist-inline small">
-                    <dt>Color: </dt>
-                    <dd>XXX</dd>
-                  </dl>
-                </figcaption>
+
+                <!-- Todo: elipsis mit Description -->
+
+                <!--<figcaption class="media-body">-->
+                  <!--<h6 class="title">{{product.name}} </h6>-->
+                  <!--<dl class="dlist-inline small">-->
+                    <!--<dt>Size: </dt>-->
+                    <!--<dd>XXX</dd>-->
+                  <!--</dl>-->
+                  <!--<dl class="dlist-inline small">-->
+                    <!--<dt>Color: </dt>-->
+                    <!--<dd>XXX</dd>-->
+                  <!--</dl>-->
+                <!--</figcaption>-->
+
+
               </figure>
             </td>
             <td>
