styling farben feinschliff zum 1.

--- a/src/app/admin/admin-product-edit-category/admin-product-edit-category.component.html
+++ b/src/app/admin/admin-product-edit-category/admin-product-edit-category.component.html
@@ -14,7 +14,7 @@
       <td>{{kat.name}}</td>
       <td>{{kat.description}}</td>
       <td><button class="btn btn-sm btn-danger" (click)="onDeletItem(kat.id)">
-        <!--<fa name="trash"></fa>--> X
+        <!--<fa name="trash"></fa>--> <i class="fa fa-trash"></i>
       </button></td>
     </tr>
     </tbody>
