--- a/src/app/checkout/checkout-login/checkout-login.component.html
+++ b/src/app/checkout/checkout-login/checkout-login.component.html
@@ -6,7 +6,7 @@
 
     <div class="card">
       <a [routerLink]="['/user-login-register-slide']" [queryParams]="{orderstep: '1', register: '1'}">
-      <div class="card-header text-center ">
+      <div class="card-header text-center card-header-green">
         <h4 class="card-title">Registration</h4>
         <h2><i class="fa fa-user fa-3x"></i></h2>
       </div>
@@ -23,7 +23,7 @@
 
     <div class="card">
       <a [routerLink]="['/user-login-register-slide']" [queryParams]="{orderstep: '1', login: '1'}">
-        <div class="card-header text-center ">
+        <div class="card-header text-center card-header-red">
           <h4 class="card-title">Login</h4>
           <h2><i class="fa fa-sign-in fa-3x"></i></h2>
         </div>
@@ -38,7 +38,7 @@
     <div class="card">
 
       <a [routerLink]="['../checkout/customerdata']">
-        <div class="card-header text-center ">
+        <div class="card-header text-center card-header-blue">
           <h4 class="card-title">Bestellung</h4>
           <h2><i class="fa fa-shopping-cart fa-3x"></i></h2>
         </div>
