--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -85,6 +85,8 @@
   </button>
 
 
+  <div style="clear: both"></div>
+
   <pagination-controls (pageChange)="p = $event"
                        maxSize="9"
                        directionLinks="true"
