--- a/src/app/styles/_override_bootstrap_variables.scss
+++ b/src/app/styles/_override_bootstrap_variables.scss
@@ -7,8 +7,27 @@ $hr-border-color: #fff;
 
 $theme-colors: (
   "primary": grey,
-  "danger": #ff4136
+  "danger": #f98d8d
 );
+
+.btn-danger {
+  color: #fff;
+}
+
+$font-size-base: 1rem;
+$h1-font-size: $font-size-base * 2.5;
+$h2-font-size: $font-size-base * 2;
+$h3-font-size: $font-size-base * 1.75;
+$h4-font-size: $font-size-base * 1.5;
+$h5-font-size: $font-size-base * 1.25;
+$h6-font-size: $font-size-base;
+
+
+// Button Style start
+$mabr-btn-bg-color: grey;
+$mabr-btn-color: #FFF;
+$mabr-btn-color-active: lighten($mabr-btn-bg-color, 15%);
+$mabr-btn-border-radius: 5px;
 
 
 body {
@@ -25,12 +44,15 @@ body {
   cursor: pointer;
 }
 
+pagination-controls {
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+}
 
-// Button Style start
-$mabr-btn-bg-color: grey;
-$mabr-btn-color: #FFF;
-$mabr-btn-color-active: lighten($mabr-btn-bg-color, 15%);
-$mabr-btn-border-radius: 5px;
+.ngx-pagination .current {
+  background: $mabr-btn-bg-color!important;
+}
 
 .btn {
   padding: 12px 24px;
