--- a/src/app/user/user-login-register-slide/styles/user-login-register-slide.component.scss
+++ b/src/app/user/user-login-register-slide/styles/user-login-register-slide.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/_shared';
+
 *, *:before, *:after {
   box-sizing: border-box;
   margin: 0;
@@ -101,7 +103,7 @@ button {
     width: $contW;
     height: 100%;
     // background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/sections-3.jpg');
-    background-image: url('../../../assets/bettbild.jpeg');
+    background-image: url('../../../../assets/bettbild.jpeg');
     background-size: cover;
     transition: transform $switchAT ease-in-out;
   }
@@ -252,7 +254,8 @@ input {
 .submit {
   margin-top: 40px;
   margin-bottom: 20px;
-  background: #d4af7a;
+  background: $mabr-btn-bg-color;
+  // background: red;
   text-transform: uppercase;
 }
 
