styling farben feinschliff zum 2. admin area

--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -4,7 +4,7 @@
 
     <div class="col-md-3">
       <a routerLink="/admin/add">
-        <div class="card text-center bg-primary text-white mb-3">
+        <div class="card text-center text-white mb-3 card-green">
           <div class="card-body">
             <h6>Produkt hinzufügen</h6>
             <h4 class="display-4">
@@ -16,8 +16,21 @@
     </div>
 
     <div class="col-md-3">
+      <a routerLink="/admin/list">
+        <div class="card text-center text-white mb-3 card-green">
+          <div class="card-body">
+            <h6>Produkte verwalten</h6>
+            <h4 class="display-4">
+              <i class="fa fa-cog"></i>
+            </h4>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
       <a routerLink="/admin/add-category">
-        <div class="card text-center bg-primary text-white mb-3">
+        <div class="card text-center text-white mb-3 card-blue">
           <div class="card-body">
             <h6>Kategorien hinzufügen</h6>
             <h4 class="display-4">
@@ -29,8 +42,28 @@
     </div>
 
     <div class="col-md-3">
+      <a routerLink="/admin/edit-category">
+        <div class="card text-center text-white mb-3 card-blue">
+          <div class="card-body">
+            <h6>Kategorien verwalten</h6>
+            <h4 class="display-4">
+              <i class="fa fa-folder"></i>
+            </h4>
+          </div>
+        </div>
+      </a>
+    </div>
+
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="row admin-icons">
+
+    <div class="col-md-3">
       <a routerLink="/users/list">
-        <div class="card text-center bg-primary text-white mb-3">
+        <div class="card text-center text-white mb-3 card-red">
           <div class="card-body">
             <h6>Benutzer verwalten</h6>
             <h4 class="display-4">
