--- a/src/app/admin/admin-product-edit-category/admin-product-edit-category.component.html
+++ b/src/app/admin/admin-product-edit-category/admin-product-edit-category.component.html
@@ -1,22 +1,26 @@
-<div class="table-responsive-sm">
-  <table class="table" *ngIf="(categories$ | async) as kategorie">
-    <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">Beschreibung</th>
-      <th scope="col">Aktion</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let kat of kategorie; let i = index">
-      <th scope="row">{{i}}</th>
-      <td>{{kat.name}}</td>
-      <td>{{kat.description}}</td>
-      <td><button class="btn btn-sm btn-danger" (click)="onDeletItem(kat.id)">
-        <!--<fa name="trash"></fa>--> <i class="fa fa-trash"></i>
-      </button></td>
-    </tr>
-    </tbody>
-  </table>
+<app-page-title title="Kategorien verwalten" [children]="[{title: 'Kategorien verwalten'}]"></app-page-title>
+<div class="container">
+  <div class="table-responsive-sm">
+    <table class="table" *ngIf="(categories$ | async) as kategorie">
+      <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Beschreibung</th>
+        <th scope="col">Aktion</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let kat of kategorie; let i = index">
+        <th scope="row">{{i}}</th>
+        <td>{{kat.name}}</td>
+        <td>{{kat.description}}</td>
+        <td><button class="btn btn-sm btn-danger" (click)="onDeletItem(kat.id)">
+          <!--<fa name="trash"></fa>--> <i class="fa fa-trash"></i>
+        </button></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <a appBackButton class="mt-4 d-block pointer">Zurück zum Dashboard</a>
 </div>
