--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -31,20 +31,20 @@
         </div>
       </div>
 
-      <ngb-tabset>
-        <ngb-tab title="Variante1">
-          <ng-template ngbTabContent>
-            <p><span>Variante 1 Details sind hier beschrieben</span></p>
+      <ngb-tabset *ngIf="product.moreInfo1Title || product.moreInfo1Text || product.moreInfo2Title || product.moreInfo2Text || product.moreInfo3Title || product.moreInfo3Text">
+        <ngb-tab title="{{product.moreInfo1Title}}" *ngIf="product.moreInfo1Title">
+          <ng-template ngbTabContent *ngIf="product.moreInfo1Text">
+            <p><span>{{product.moreInfo1Text}}</span></p>
           </ng-template>
         </ngb-tab>
-        <ngb-tab title="Variante2">
-          <ng-template ngbTabContent>
-            <p><span>Variante 2 Details sind hier beschrieben</span></p>
+        <ngb-tab title="{{product.moreInfo2Title}}" *ngIf="product.moreInfo2Title">
+          <ng-template ngbTabContent *ngIf="product.moreInfo2Text">
+            <p><span>{{product.moreInfo2Text}}</span></p>
           </ng-template>
         </ngb-tab>
-        <ngb-tab title="Variante3">
-          <ng-template ngbTabContent>
-            <p><span>Variante 3 Details sind hier beschrieben</span></p>
+        <ngb-tab title="{{product.moreInfo3Title}}" *ngIf="product.moreInfo3Title">
+          <ng-template ngbTabContent *ngIf="product.moreInfo3Text">
+            <p><span>{{product.moreInfo3Text}}</span></p>
           </ng-template>
         </ngb-tab>
       </ngb-tabset>
