admin area more buttons with styling and expand product add/list and product detail with tabs

--- a/src/app/admin/admin-product-list-edit/admin-product-list-edit.component.html
+++ b/src/app/admin/admin-product-list-edit/admin-product-list-edit.component.html
@@ -29,6 +29,24 @@
           <p-dropdown [options]="Cat" [(ngModel)]="selectedCategory" name="productCategory" placeholder="{{product.productCategory}}" optionLabel="name" [showClear]="true" filter="true"></p-dropdown>
         </div>
         <div>
+          <label>TabTitel1: </label> <input type="text" [(ngModel)]="product.moreInfo1Title" name="moreInfo1Title">
+        </div>
+        <div>
+          <label>TabText1: </label> <input type="text" [(ngModel)]="product.moreInfo1Text" name="moreInfo1Text">
+        </div>
+        <div>
+          <label>TabTitel2: </label> <input type="text" [(ngModel)]="product.moreInfo2Title" name="moreInfo2Title">
+        </div>
+        <div>
+          <label>TabText2: </label> <input type="text" [(ngModel)]="product.moreInfo2Text" name="moreInfo2Text">
+        </div>
+        <div>
+          <label>TabTitel3: </label> <input type="text" [(ngModel)]="product.moreInfo3Title" name="moreInfo3Title">
+        </div>
+        <div>
+          <label>TabText3: </label> <input type="text" [(ngModel)]="product.moreInfo3Text" name="moreInfo3Text">
+        </div>
+        <div>
           <label>Discount: </label> <p-checkbox binary="true" value="discount" label="Aktion" [(ngModel)]="product.discount" name="discount"></p-checkbox>
         </div>
         <div *ngIf="product.discount">
@@ -81,6 +99,24 @@
       </div>
       <div>
         <label>Kategorie: </label> {{product.productCategory}}
+      </div>
+      <div>
+        <label>Tab1Titel: </label> {{product.moreInfo1Title}}
+      </div>
+      <div>
+        <label>Tab1Text: </label> {{product.moreInfo1Text}}
+      </div>
+      <div>
+        <label>Tab2Titel: </label> {{product.moreInfo2Title}}
+      </div>
+      <div>
+        <label>Tab2Text: </label> {{product.moreInfo2Text}}
+      </div>
+      <div>
+        <label>Tab3Titel: </label> {{product.moreInfo3Title}}
+      </div>
+      <div>
+        <label>Tab3Text: </label> {{product.moreInfo3Text}}
       </div>
       <div>
         <label>Discount: </label> {{product.discount}}
