--- a/src/app/core/header/header-orderflyout/header-orderflyout.component.html
+++ b/src/app/core/header/header-orderflyout/header-orderflyout.component.html
@@ -10,30 +10,37 @@
         <div *ngIf="(productsPerOrderLocalStorage?.length > 0);then items else no_items">  </div>
 
         <ng-template #items>
-          <table id="cart-content" class="u-full-width">
+          <table id="cart-content">
             <thead>
             <tr>
-              <th style="min-width: 50px">Artikel</th>
-              <th></th>
-              <th>Rabatt</th>
-              <th class="text-right" style="min-width: 80px">Anz.</th>
-              <th class="text-right" style="min-width: 80px">Total</th>
+              <th class="preview-product">Artikel</th>
+              <th class=""></th>
+              <th class="preview-discount text-right">Rabatt</th>
+              <th class="preview-qty text-right">Anz.</th>
+              <th class="preview-total text-right">Total</th>
             </tr>
             </thead>
             <tbody>
 
-            <tr *ngFor="let item of  productsPerOrderLocalStorage">
+            <tr *ngFor="let item of  productsPerOrderLocalStorage | slice:0:5">
               <td>
-                <img src="{{item.image}}" width="50px;">
+                <img class="preview-picture"src="{{item.image}}">
               </td>
-              <td>{{item.name}}</td>
+              <td class="preview-prodname">{{item.name}}</td>
 
-              <td><span *ngIf="item.discountFactor !== 1">{{(1 - item.discountFactor) * 100 | number : '1.0'}}%</span></td>
+              <td class="text-right"><span *ngIf="item.discountFactor !== 1">{{(1 - item.discountFactor) * 100 | number : '1.0'}}%</span></td>
               <td class="text-right">{{item.qty}}</td>
               <td class="text-right">{{item.price *  item.discountFactor | number : '1.2-2'}}</td>
 
             </tr>
-            <tr></tr>
+
+
+            <tr *ngIf="productsPerOrderLocalStorage?.length > 5" class="ellipsis">
+              <td colspan="5" ><i class="fa fa-ellipsis-h"></i> </td>
+            </tr>
+
+            </tbody>
+            <tfoot>
             <tr>
               <td></td>
               <td></td>
@@ -41,8 +48,8 @@
               <td>Total</td>
               <td class="text-right">{{order?.totalValue | number : '1.2-2' }}</td>
             </tr>
+            </tfoot>
 
-            </tbody>
           </table>
 
           <button [routerLink]="['bestellung']" (click)="closeFlyout()" id="clear-cart" class="button btn btn-primary mt-2">Bestellen</button>
