--- a/src/app/shared/page-title/page-title.component.scss
+++ b/src/app/shared/page-title/page-title.component.scss
@@ -13,7 +13,7 @@ $line-height-h3: 1.6;
   // margin-bottom: ceil($grid-vertical-step * 2.5); //~60px
   // padding: floor($grid-vertical-step * 1.5) 0; //~36px 0
   border-bottom: 1px solid black;
-  background-color: lightgrey;
+  background-color: #e4dcc2;
   > .container,
   > .container-fluid { display: table; }
   .column {
