--- a/src/app/product/product-list/product-list.component.scss
+++ b/src/app/product/product-list/product-list.component.scss
@@ -50,7 +50,7 @@ main.col-sm-12 {
 
 // https://bootsnipp.com/snippets/ORE0l
 // bootstrap4: text-truncate
-.description-crop-text-1 {
+.crop-text-1 {
   @media(max-width: 450px){
   width: 150px;
   white-space: nowrap;
