logout pointer fix

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -18,7 +18,7 @@
         <a [routerLink]="['user-login-register-slide']" *ngIf="!isLoggedIn" class="nav-link mr-4" routerLinkActive="active">Login/Register</a>
       </li>
       <li class="nav-item">
-        <a (click)="logout()" *ngIf="isLoggedIn" class="nav-link mr-5" routerLinkActive="active">Logout</a>
+        <a href="#" (click)="logout()" *ngIf="isLoggedIn" class="nav-link mr-5" routerLinkActive="active">Logout</a>
       </li>
       <!--<li class="nav-item lang">-->
         <!--<a class="nav-link" routerLinkActive="active">DE</a><span class="nav-link">/</span><a class="nav-link">EN</a>-->
