--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -19,7 +19,7 @@
             <h4 class="font-26 text-primary">CHF {{product.price * product.discountFactor | number : '1.2-2'}}</h4>
 
           </div>
-          <p>{{product.description}}</p>
+          <p [innerHTML]="product.description"></p>
           <div class="d-flex justify-content-between">
             <div class="align-content-start w-50 mr-3">
               <input class="form-control form-control-lg" type="number" min="1" placeholder="1" [(ngModel)]="product.itemcount">
